# cmake-demo

./: .gitignore  CMakeLists.txt  Main.cpp
cmake/: FindSDL2.cmake  sdl2-config.cmake
